--- a/Views/Home/Create.cshtml
+++ b/Views/Home/Create.cshtml
@@ -1,35 +1,42 @@
-﻿@{
+﻿@model Product
+
+@{
     ViewData["Title"] = "Create Title";
 }
 
 
-<form action="/Home/Create" method="post">
+<form  asp-controller="Home" asp-action="Create" method="post">
+
+    <div asp-validation-summary="All"></div>
+
     <div class="mb-3">
-        <label for="Name" class="form-label">Name</label>
-        <input type="text" name="Name" id="Name" class="form-control">
+        <label asp-for="Name" class="form-label"></label>
+        <input  asp-for="Name" class="form-control">
+        <span asp-validation-for ="Name"></span>
     </div>
     <div class="mb-3">
-        <label for="Price" class="form-label">Price</label>
-        <input type="text" name="Price" id="Price" class="form-control">
+        <label asp-for="Price" class="form-label"></label>
+        <input asp-for="Price"  class="form-control">
+        <span asp-validation-for ="Price"></span>
     </div>
     <div class="mb-3">
-        <label for="Image" class="form-label">Image</label>
-        <input type="text" name="Image" id="Image" class="form-control">
+        <label asp-for="Image" class="form-label"></label>
+        <input asp-for="Image"  class="form-control">
+        <span asp-validation-for="Image"></span>
     </div>
     <div class="mb-3">
-        <label for="CategoryId" class="form-label">Category</label>
-        <select name="CategoryId" id="CategoryId" class="form-select">
-              <option value="0">Hepsi</option>
-            @foreach(var item in  @ViewBag.Categories)
-            {
-                <option value="@item.CategoryId">@item.Name</option>
-            }
+        <label asp-for="CategoryId" class="form-label">Category</label>
+         
+        <select asp-for="CategoryId" class="form-select" asp-items="ViewBag.Categories">
+              <option value="">Hepsi</option>
+    
           
         </select>
+        <span asp-validation-for="CategoryId"></span>
     </div>
     <div class="mb-3 form-check">
-        <input type="checkbox" name="IsActive" id="IsActive" class="form-check-input">
-        <label for="IsActive" class="form-check-label">Is Active</label>
+        <input asp-for="IsActive"  class="form-check-input">
+        <label asp-for="IsActive" class="form-check-label"></label>
     </div>
     <button type="submit" class="btn btn-primary">Kaydet</button>
 </form>
